<resources>
    <string name="app_name">Habrachan</string>

    <string name="not_implemented">Not implemented</string>

    <string name="menu_account">Account</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_menu">Menu</string>
    <string name="category_articles_top">Top</string>
    <string name="category_articles_interesting">Interesting</string>
    <string name="category_articles_all">All posts</string>
    <string name="category_articles_subscription">By subscription</string>
    <string name="start_search">Start search by query</string>
    <string name="relevance">Relevance</string>
    <string name="retry">Retry</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="reply">Reply</string>
    <string name="Authorization">Authorization</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="cant_sign_in">Can\'t sign in</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="badges">Bages</string>
    <string name="registered">Registered</string>
    <string name="karma">Karma</string>
    <string name="rating">Rating</string>
    <string name="full_name">Full name</string>
    <string name="got_it">Got it</string>
    <string name="should_be_logged_in_for_user">You should be logged in to viewing user profile</string>
    <string name="should_be_logged_in_for_action">You should be logged in to performing this action</string>
    <string name="network_check_error">Network problems… \nCheck your internet connection</string>
    <string name="repeated_voting_is_prohibited">Repeated voting is prohibited</string>
    <string name="menu_search">Search</string>

    <string name="articles_time_format">%1$s in %2$s</string>
    <string name="articles_footer_content_end">This is the end of the content</string>

    <string name="articles_type_all">All articles</string>
    <string name="articles_type_interesting">Interesting</string>
    <string name="articles_type_subscription">By subscription</string>
    <string name="articles_type_top">Top</string>
    <string name="articles_type_search">Search</string>

    <string name="articles_search_preposition">by</string>
    <string name="articles_search_type_date">Date</string>
    <string name="articles_search_type_relevance">Relevance</string>
    <string name="articles_search_type_rating">Rating</string>

    <string name="articles_top_preposition">Top of %1$s</string>
    <string name="articles_top_type_alltime">All-time</string>
    <string name="articles_top_type_yearly">Yearly</string>
    <string name="articles_top_type_monthly">Monthly</string>
    <string name="articles_top_type_weekly">Weekly</string>
    <string name="articles_top_type_daily">Daily</string>

    <string name="menu_article_share">Share article</string>
    <string name="article_vote_action_login_require_text">You should be logged in to performing this action</string>
    <string name="article_vote_action_login_require_button">Log in</string>
    <string name="article_vote_action_negative_describe_text">Negative reason should be described</string>
    <string name="article_vote_action_negative_describe_button">Close</string>
    <string name="article_vote_action_negative_dialog_title">Specify the reason of the downvote for the author</string>
    <string name="article_vote_action_negative_dialog_positive">Select reason</string>
    <string name="article_vote_action_negative_dialog_neutral">Cancel</string>
    <string-array name="article_vote_action_negative_dialog_reasons">
        <item>It’s hardly a tech article</item>
        <item>Seems more like a commercial to me</item>
        <item>It’s off-topic to Habr</item>
        <item>A lot of errors and typos in the text</item>
        <item>The article is carelessly formatted</item>
        <item>Prejudice against the author or company</item>
        <item>There is nothing new for me in this article</item>
        <item>Didn’t understand anything while reading</item>
        <item>Other</item>
        <item>Disagree with the article</item>
    </string-array>

    <string name="menu_content_share">Share content url</string>
    <string name="menu_content_download">Download content</string>
    <string name="content_error_loading">Content not loaded yet</string>
    <string name="content_error_file_exists">File already exists</string>
    <string name="content_error_file_parent">Couldn\'t create parent directories</string>
    <string name="content_error_stream">Couldn\'t create stream for writing in the file</string>
    <string name="content_loading_finish">Content was successfully loaded</string>
    <string name="content_error_uri">Couldn\'t handle content provider</string>
    <string name="content_error_permissions">Cancel download: not all permissions were granted</string>

    <string name="comments_reply_empty">Reply on this comment</string>
    <string name="comments_reply_count">Show replies(%1$d)</string>
    <string name="comments_time_format">%1$s in %2$s</string>
    <string name="layout_comments_empty_state_title">Such empty…</string>
    <string name="layout_comments_empty_state_message">There are no comments for this article yet</string>
    <string name="layout_comments_empty_state_button">Be the first one</string>

    <string name="user_content_profile_badges">Badges</string>
    <string name="user_content_profile_location">Location</string>
    <string name="user_content_profile_registered">Registered</string>

    <string name="user_content_profile">Profile</string>
    <string name="user_content_articles">Articles</string>
    <string name="user_content_comments">Comments</string>
    <string name="user_content_bookmarks">Bookmarks</string>
    <string-array name="user_fragment_tabs">
        <item>@string/user_content_profile</item>
        <item>@string/user_content_articles</item>
        <item>@string/user_content_comments</item>
        <item>@string/user_content_bookmarks</item>
    </string-array>

    <string name="menu_logout">Logout</string>
    <string name="menu_send_message">Send message</string>

    <string name="comments_message_no_comments">There are no comments\nfor this publication at now</string>
    <string name="comments_button_first_comment">Be the first one</string>
    <string name="comments_fragment_subtitle">Comments</string>
    <string name="comment_popup_inspect_user">Inspect user</string>

    <string name="login_toolbar_authorization">Authorization</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_email_error_blank">E-mail should not be empty</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_error_blank">Password should not be empty</string>
    <string name="login_unknown_error">Unknown error</string>
    <string name="login_account_error">There is no user with such email and password</string>
    <string name="login_button">Log in</string>
    <string name="login_fragment_oauth_separator">or log in with</string>

    <string name="user_fullname">Full name</string>
    <string name="user_registered">Registered</string>
    <string name="user_counter_karma">Karma</string>
    <string name="user_counter_rating">Rating</string>
    <string name="user_counter_followers">Followers</string>
    <string name="user_counter_following">Following</string>

    <string name="fragment_login_password_recovery">Forgot password?</string>
    <string name="app_name22">sas</string>

</resources>
