<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Habrachan.Light.Default"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        style="@style/Habrachan.Light.Toolbar"
        android:id="@+id/fragment_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightLL"
        app:titleTextColor="@android:color/white"
        app:title="@string/login_toolbar_authorization"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_hint"
        android:layout_marginTop="@dimen/dimen5XL"
        android:layout_marginHorizontal="@dimen/dimenL"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        app:endIconMode="password_toggle"
        android:layout_marginTop="@dimen/dimen2XL"
        android:layout_marginHorizontal="@dimen/dimenL"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:visibility="gone"
        style="@style/Habrachan.Text"
        android:id="@+id/fragment_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_password_recovery"
        android:layout_marginTop="@dimen/dimenMS"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightLL"
        android:text="@string/login_button"
        android:layout_marginTop="@dimen/dimenL"
        android:layout_marginHorizontal="@dimen/dimenL"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_forgot" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/fragment_login_progress"
        style="@style/Habrachan.Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fragment_login_button"
        app:layout_constraintStart_toStartOf="@id/fragment_login_button"
        app:layout_constraintEnd_toEndOf="@id/fragment_login_button"
        app:layout_constraintBottom_toBottomOf="@id/fragment_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>