<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_fragment_content_profile_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:visibility="gone"
            android:id="@+id/user_fragment_content_profile_badges_title"
            android:text="@string/user_content_profile_badges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:visibility="gone"
            android:id="@+id/user_fragment_content_profile_badges_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/user_fragment_content_profile_badges_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/user_fragment_content_profile_location_title"
            android:text="@string/user_content_profile_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/user_fragment_content_profile_badges_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/user_fragment_content_profile_location_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/user_fragment_content_profile_location_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/user_fragment_content_profile_registered_title"
            android:text="@string/user_content_profile_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/user_fragment_content_profile_location_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/user_fragment_content_profile_registered_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/user_fragment_content_profile_registered_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>